--- a/main.css
+++ b/main.css
@@ -1,13 +1,352 @@
+*{
+    /* Universal reset: */
+    margin:0;
+    padding:0;
+}
+
+header,footer,
+article,section,
+hgroup,nav,
+figure{
+	/* Giving a display value to the HTML5 rendered elements: */
+	display:block;
+}
+
+body{
+	/* Setting the default text color, size, page background and a font stack: */
+	font-size:0.825em;
+	color:#fcfcfc;
+        background-color:#cccccc;
+	font-family:Arial, Helvetica, sans-serif;
+}
+
+/* Hyperlink Styles: */
+
+a, a:visited {
+	color:#0196e3;
+	text-decoration:none;
+	outline:none;
+}
+
+a:hover{
+	text-decoration:underline;
+}
+
+a img{
+	border:none;
+}
+
+/* Headings: */
+
+h1,h2,h3{
+	font-family:"Myriad Pro","Helvetica Neue",Helvetica,Arial,Sans-Serif;
+	text-shadow:0 1px 1px black;
+}
+
+h1{
+	/* The logo text */
+	font-size:3.5em;
+	padding:0.5em 0 0;
+	text-transform:uppercase;
+}
+
+h3{
+	/* The slogan text */
+	font-family:forte,"Myriad Pro","Helvetica Neue",Helvetica,Arial,Sans-Serif;
+	font-size:2em;
+	font-weight:normal;
+	margin:0 0 1em;
+}
+
+
+h2{
+	font-size:2.2em;
+	font-weight:normal;
+	letter-spacing:0.01em;
+	text-transform:uppercase;
+}
+
+p{
+	line-height:1.5em;
+	padding-bottom:1em;
+}
+
+.line{
+	/* The dividing line: */
+	height:1px;
+        background-color:#ffffff;
+	border-bottom:1px solid #416371;
+	margin:1em 0;
+	overflow:hidden;
+}
+
+article .line{
+	/* The dividing line inside of the article is darker: */
+        background-color:#DDF0EB;
+	border-bottom-color:#204656;
+	margin:1.3em 0;
+}
+
+footer .line{
+	margin:2em 0;
+}
+
+nav{
+	background:url(img/gradient_light.jpg) repeat-x 50% 50% #f8f8f8;
+	padding:0 5px;
+	position:absolute;
+	right:0;
+	top:4em;
+	
+	border:1px solid #FCFCFC;
+
+	-moz-box-shadow:0 1px 1px #333333;
+	-webkit-box-shadow:0 1px 1px #333333;
+	box-shadow:0 1px 1px #333333;
+}
+
+/* The clearfix hack to clear the floats: */
+
+.clear:after{
+	content: ".";
+	display: block;
+	height: 0;
+	clear: both;
+	visibility: hidden;
+}
+
+/* The navigation styling: */
+
+nav ul li{
+	display:inline;
+}
+
+nav ul li a,
+nav ul li a:visited{
+	color:#565656;
+	display:block;
+	float:left;
+	font-size:1.25em;
+	font-weight:bold;
+	margin:5px 2px;
+	padding:7px 10px 4px;
+	text-shadow:0 1px 1px white;
+	text-transform:uppercase;
+}
+
+nav ul li a:hover{
+	text-decoration:none;
+	background-color:#f0f0f0;
+}
+
+nav, article, nav ul li a,figure{
+	/* Applying CSS3 rounded corners: */
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius:10px;
+}
+
+/* Article styles: */
+
+#page{
+	width:960px;
+	margin:0 auto;
+	position:relative;
+}
+
+article{
+    background-color:#737070;
+	margin:3em 0;
+	padding:20px;
+	
+	text-shadow:0 2px 0 black;
+}
+
+figure{
+	border:3px solid #142830;
+	float:right;
+	height:400px;
+	margin-left:15px;
+	overflow:hidden;
+	width:620px;
+}
+
+figure:hover{
+	-moz-box-shadow:0 0 2px #4D7788;
+	-webkit-box-shadow:0 0 2px #4D7788;
+	box-shadow:0 0 2px #4D7788;
+}
+
+figure img{
+	margin-left:-60px;
+}
+
+/* Footer styling: */
+
+footer{
+	margin-bottom:30px;
+	text-align:center;
+	font-size:0.825em;
+}
+
+
+footer p{
+	margin-bottom:-2.5em;
+	position:relative;
+}
+
+footer a,footer a:visited{
+	color:#cccccc;
+	background-color:#213e4a;
+	display:block;
+	padding:2px 4px;
+	z-index:100;
+	position:relative;
+}
+
+footer a:hover{
+	text-decoration:none;
+	background-color:#142830;
+}
+
+footer a.by{
+	float:left;
+
+}
+
+footer a.up{
+	float:right;
+}
+
+/* the overlayed element */
+
+.simple_overlay {
+    
+	/* must be initially hidden */
+	display:none;
+	
+	/* place overlay on top of other elements */
+	z-index:10000;
+	
+	/* styling */
+	background-color:#000;
+	
+	width:200px;	
+	min-height:300px;
+	border:1px solid #666;
+	
+	/* CSS3 styling for latest browsers */
+	-moz-box-shadow:0 0 90px 5px #000;
+	-webkit-box-shadow: 0 0 90px #000;	
+}
+
+/* close button positioned on upper right corner */
+
+.simple_overlay .close {
+	background-image:url(http://vor2.com/screenshot/CLOSE.PNG);
+	position:absolute;
+	right:-15px;
+	top:-15px;
+	cursor:pointer;
+	height:35px;
+	width:35px;
+    z-index:10001;
+}
+
 .warn{
-    display:block;
-    }
+    display:block; 
+    background-color:yellow; 
+    width: 200px; 
+    height:25px;
+    color:#000;
+}
 
 .warnImg{
-    position:relative;
-    float:left;
-    }
+    position:relative; 
+    float:left; 
+    height:25px; 
+    width:25px;
+}
 
 .warnTxt{
+    position:relative; 
+    float:left; 
+    font-family:"Lucida Console"; 
+    font-size:10px; 
+    padding: 2px 3px;
+}
+
+.repProj{
+    font-family:"Helvetica";
     position:relative;
-    float:rightt;
-    }
+    background-color:white;
+    width:200px;
+    height:150px;
+}
+
+.actProj{
+    font-family:"Helvetica";
+    position:relative;
+    background-color:black;
+    width:200px;
+    height:150px;
+}
+
+.repSpeedTitle{
+    font-size:22px;
+    position:relative;
+    padding-top:0px;
+    height:50px;
+    width:200px;
+    margin-left:auto;
+    margin-right:auto;
+    color:black;
+    text-align:center;
+}
+
+.actSpeedTitle{
+    font-size:22px; 
+    position:relative; 
+    padding-top:0px; 
+    height:50px; 
+    width:200px; 
+    margin-left:auto; 
+    margin-right:auto;
+    color:white;
+    text-align:center;
+}
+
+.speed{
+    position:relative, 
+    width:200px; 
+    height:75px; 
+    text-align:center; 
+    margin-top:15px; 
+    font-size: 65px;
+}
+
+.act-speed-block{
+    letter-spacing:5px; 
+    position:relative; 
+    float:left; 
+    margin-left:32px; 
+    height:70px; 
+    width:120px; 
+    color:yellow; 
+    background-color:black; 
+    border-style:solid; 
+    border-color:yellow;
+}
+
+.rep-speed-block{
+    letter-spacing:5px; 
+    position:relative; 
+    float:left; 
+    margin-left:32px; 
+    height:70px; 
+    width:120px; 
+    color:black; 
+    background-color:white; 
+    border-style:solid; 
+    border-color:black;
+}
